[gd_scene load_steps=2 format=3 uid="uid://dysuks4asfabv"]

[ext_resource type="Script" path="res://thot/websocket/prueba_2.gd" id="1_rxvhu"]

[node name="prueba_2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxvhu")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.407843, 0.188235, 0.596078, 1)

[node name="server" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Cliente" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="server2" type="Button" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 89.0
offset_right = 406.0
offset_bottom = 120.0
text = "server"

[node name="cliente" type="Button" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 83.0
offset_right = 170.0
offset_bottom = 114.0
text = "cliente"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 134.0
offset_right = 329.0
offset_bottom = 165.0
text = "send mensaje"

[node name="peers" type="Button" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 55.0
offset_right = 289.0
offset_bottom = 86.0
text = "peers"

[connection signal="pressed" from="server2" to="." method="_on_server_2_pressed"]
[connection signal="pressed" from="cliente" to="." method="_on_cliente_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="peers" to="." method="_on_peers_pressed"]
